--- a/index.html
+++ b/index.html
@@ -8,7 +8,66 @@
     <title>zoom.us</title>
 </head>
 <body>
-    sciao belli
-    
+    <div class="main-container">
+        <div class="flex wrap-on main-avatar-gap">
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=1" alt="avatar" class="avatar">
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=2" alt="avatar" class="avatar">
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=3" alt="avatar" class="avatar">
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200" alt="avatar" class="avatar">
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200" alt="avatar" class="avatar">
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200" alt="avatar" class="avatar">
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200" alt="avatar" class="avatar">
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200" alt="avatar" class="avatar">
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200" alt="avatar" class="avatar">
+                </div>   
+            </div>
+        </div>
+    </div>
+
+    <div class="bottom-bar-container">
+
+    </div>
 </body>
 </html>
