--- a/index.html
+++ b/index.html
@@ -4,63 +4,414 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>zoom.us</title>
 </head>
 <body>
+    <div class="top-bar-container">
+        
+    </div>
     <div class="main-container">
         <div class="flex wrap-on main-avatar-gap">
             <div class="col-7">
                 <div class="avatar-container">
                     <img src="https://picsum.photos/300/200?random=1" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
                 </div>   
             </div>
 
             <div class="col-7">
                 <div class="avatar-container">
                     <img src="https://picsum.photos/300/200?random=2" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
                 </div>   
             </div>
 
             <div class="col-7">
                 <div class="avatar-container">
                     <img src="https://picsum.photos/300/200?random=3" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
                 </div>   
             </div>
 
             <div class="col-7">
                 <div class="avatar-container">
-                    <img src="https://picsum.photos/300/200" alt="avatar" class="avatar">
+                    <img src="https://picsum.photos/300/200?random=4" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
                 </div>   
             </div>
 
             <div class="col-7">
                 <div class="avatar-container">
-                    <img src="https://picsum.photos/300/200" alt="avatar" class="avatar">
+                    <img src="https://picsum.photos/300/200?random=5" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
                 </div>   
             </div>
 
             <div class="col-7">
                 <div class="avatar-container">
-                    <img src="https://picsum.photos/300/200" alt="avatar" class="avatar">
+                    <img src="https://picsum.photos/300/200?random=6" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
                 </div>   
             </div>
 
             <div class="col-7">
                 <div class="avatar-container">
-                    <img src="https://picsum.photos/300/200" alt="avatar" class="avatar">
+                    <img src="https://picsum.photos/300/200?random=7" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
                 </div>   
             </div>
 
             <div class="col-7">
                 <div class="avatar-container">
-                    <img src="https://picsum.photos/300/200" alt="avatar" class="avatar">
+                    <img src="https://picsum.photos/300/200?random=8" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
                 </div>   
             </div>
 
             <div class="col-7">
                 <div class="avatar-container">
-                    <img src="https://picsum.photos/300/200" alt="avatar" class="avatar">
+                    <img src="https://picsum.photos/300/200?random=9" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=10" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=11" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=12" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=13" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=14" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=15" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=16" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=17" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=18" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=19" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=20" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=21" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=22" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=23" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=24" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=25" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=26" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=27" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=28" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=29" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=30" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=31" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=32" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=33" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=34" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=35" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=36" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=37" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=38" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=39" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
+                </div>   
+            </div>
+
+            <div class="col-7">
+                <div class="avatar-container">
+                    <img src="https://picsum.photos/300/200?random=40" alt="avatar" class="avatar">
+                    <div class="user-name-container">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span class="user-name">Constantin Todirascu</span>
+                    </div>
                 </div>   
             </div>
         </div>
