top bar completed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 <body>
     <div class="top-bar-container">
-        
+        <div class="top-right">
+            <span class="speaker">
+                <i class="fa-solid fa-table-cells"></i>
+                Speaker View</span>
+            <span class="full-screen">
+                <i class="fa-solid fa-maximize"></i>
+            </span>
+        </div>
     </div>
     <div class="main-container">
         <div class="flex wrap-on main-avatar-gap">
