--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
             <div class="col-sides">
                 <div class="bottom-right">
                     
-                    <div class="button-container flex align-center">
+                    <div class="button-container">
                         <div class="end-button">
                             End meeting
                         </div>
