little chat icon fix

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                         <i class="fa-solid fa-chevron-up"></i>
                     </div>
 
-                    <div class="button-container more-left-space">
+                    <div class="button-container">
                         <div class="icon-container">
                             <i class="fa-solid fa-comment"></i>
                         </div>
